Fix wrongly rounded number of hours in week total

--- a/WeekView/WeekView.xaml
+++ b/WeekView/WeekView.xaml
@@ -65,7 +65,7 @@
 						<FormattedString>
 							<FormattedString.Spans>
 								<Span Text="Week: "/>
-								<Span Text="{Binding WeekTotal.TotalHours, StringFormat='{0:N0}h'}"	x:DataType="weekview:WeekViewModel"/>
+								<Span Text="{Binding WeekTotalHours, StringFormat='{0}h'}"	x:DataType="weekview:WeekViewModel"/>
 								<Span Text="{Binding WeekTotal, StringFormat=' {0:mm}m'}"			x:DataType="weekview:WeekViewModel"/>
 							</FormattedString.Spans>
 						</FormattedString>
