--- a/Pages/EditPage.xaml
+++ b/Pages/EditPage.xaml
@@ -27,7 +27,8 @@
 			            TextColor="Blue" 
 			            BackgroundColor="Transparent"
 			            Clicked="OnCancel"
-			            BorderWidth="0">        
+			            BorderWidth="0"
+                        WidthRequest="{OnPlatform MacCatalyst=75}">        
                     <VisualStateManager.VisualStateGroups>
                         <VisualStateGroupList>
                             <VisualStateGroup x:Name="CommonStates">
@@ -57,7 +58,8 @@
                                         DisplayMemberPath="FullText"
                                         TextMemberPath="FullText"
                                         TextChanged="AutoCompleteEntry_TextChanged"
-                                        FontSize="{OnPlatform MacCatalyst=14}"/>
+                                        FontSize="{OnPlatform MacCatalyst=14}"
+                                        HeightRequest="{OnPlatform MacCatalyst=25}"/>
                 <Label Text="Date started"/>
                 <Grid ColumnSpacing="{OnPlatform MacCatalyst=10}">
                     <Grid.ColumnDefinitions>
